<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ReadPal</string>
    <string name="info_no_books_found">No books were found.\nPlease import some.</string>
    <string name="menu_content_description">Menu</string>
    <string name="search_text">Search your books</string>
    <string name="cabecalho_prin">All your books</string>
    <string name="continueReading">Continue Reading…</string>
    <string name="titulo_Memorial">Memorial do Convento</string>
    <string name="tit_ser">Sermão de Santo António aos Peixes</string>
    <string name="tit_ser_sc">Sermão de Santo António</string>
    <string name="tit_serm">Sermão de Santo António</string>
    <string name="tit_sercr">Sermão de Santo António</string>
    <string name="titulo_lus_scr">Os Lusiadas</string>
    <string name="titulo_maias_scr">Os Maias</string>
    <string name="titulo_lus_scrol">Os Lusíadas</string>
    <string name="titulo_sermao_scr">Sermão Santo António</string>
    <string name="All">All your books</string>
    <string name="titulo_lusscr">Os Lusíadas</string>
    <string name="maias_scro">Os Maias</string>
    <string name="marker_description">Select a marker color.</string>
    <string name="btn_alex">Save Alexandre Page:2</string>
    <string name="btn_del_alex">Delete</string>
    <string name="btn_bruno">Save Bruno Page:4</string>
    <string name="btn_del_bruno">Delete</string>
    <string name="btn_joao">Save João Page 6</string>
    <string name="btn_del_joao">Delete</string>
    <string name="Book_title">Title: %1$s</string>
    <string name="Book_author">Author: %1$s</string>
    <string name="Book_release_date">Release date: %1$d</string>
    <string name="Book_import_date">Import date: %1$s</string>
    <string name="importar_imagem">Import cover:</string>
    <string name="importar_imagem_botao">Change Cover</string>
    <string name="Reverter">Revert</string>
    <string name="button3">Edit</string>
    <string name="Start_read">Read from start</string>
    <string name="Profiles">Profiles</string>
    <string name="Cabecalho_text">Saved bookmarks list</string>
    <string name="Add_button">Add new profile</string>
    <string name="imageView">Book</string>
    <string name="lusiadas">Os Lusíadas</string>
    <string name="maias">Os Maias</string>
    <string name="titulo_Lusiadas">Os Lusiadas</string>
    <string name="titulo_maias">Os Maias</string>
    <string-array name="filter_itens">
        <item>"Nome (A-Z)"</item>
        <item>"Data adicão (Recente-Antigo)"</item>
        <item>"Ordem inversa"</item>
    </string-array>
    <string name="book_content_lusiadas" tools:ignore="Typos">
Luís Vaz de Camões
Os Lusíadas

        Chapter 1

Canto Primeiro

1
As armas e os barões assinalados,
Que da ocidental praia Lusitana,
Por mares nunca de antes navegados,
Passaram ainda além da Taprobana,
Em perigos e guerras esforçados,
Mais do que prometia a força humana,
E entre gente remota edificaram
Novo Reino, que tanto sublimaram;

2
E também as memórias gloriosas
Daqueles Reis, que foram dilatando
A Fé, o Império, e as terras viciosas
De África e de Ásia andaram devastando;
E aqueles, que por obras valerosas
Se vão da lei da morte libertando;
Cantando espalharei por toda parte,
Se a tanto me ajudar o engenho e arte.

3
Cessem do sábio Grego e do Troiano
As navegações grandes que fizeram;
Cale-se de Alexandro e de Trajano
A fama das vitórias que tiveram;
Que eu canto o peito ilustre Lusitano,
A quem Neptuno e Marte obedeceram:
Cesse tudo o que a Musa antígua canta,
Que outro valor mais alto se alevanta.
|!PAGE!|
        Chapter 2

4
E vós, Tágides minhas, pois criado
Tendes em mim um novo engenho ardente,
Se sempre em verso humilde celebrado
Foi de mim vosso rio alegremente,
Dai-me agora um som alto e sublimado,
Um estilo grandíloquo e corrente,
Porque de vossas águas, Febo ordene
Que não tenham inveja às de Hipoerene.

5
Dai-me uma fúria grande e sonorosa,
E não de agreste avena ou frauta ruda,
Mas de tuba canora e belicosa,
Que o peito acende e a cor ao gesto muda;
Dai-me igual canto aos feitos da famosa
Gente vossa, que a Marte tanto ajuda;
Que se espalhe e se cante no universo,
Se tão sublime preço cabe em verso.

6
E vós, ó bem nascida segurança
Da Lusitana antígua liberdade,
E não menos certíssima esperança
De aumento da pequena Cristandade;
Vós, ó novo temor da Maura lança,
Maravilha fatal da nossa idade,
Dada ao mundo por Deus, que todo o mande,
Para do mundo a Deus dar parte grande;
|!PAGE!|
7
Vós, tenro e novo ramo florescente
De uma árvore de Cristo mais amada
Que nenhuma nascida no Ocidente,
Cesárea ou Cristianíssima chamada;
(Vede-o no vosso escudo, que presente
Vos amostra a vitória já passada,
Na qual vos deu por armas, e deixou
As que Ele para si na Cruz tomou)

8
Vós, poderoso Rei, cujo alto Império
O Sol, logo em nascendo, vê primeiro;
Vê-o também no meio do Hemisfério,
E quando desce o deixa derradeiro;
Vós, que esperamos jugo e vitupério
Do torpe Ismaelita cavaleiro,
Do Turco oriental, e do Gentio,
Que inda bebe o licor do santo rio;

9
Inclinai por um pouco a majestade,
Que nesse tenro gesto vos contemplo,
Que já se mostra qual na inteira idade,
Quando subindo ireis ao eterno templo;
Os olhos da real benignidade
Ponde no chão: vereis um novo exemplo
De amor dos pátrios feitos valerosos,
Em versos divulgado numerosos.
|!PAGE!|
10
Vereis amor da pátria, não movido
De prémio vil, mas alto e quase eterno:
Que não é prémio vil ser conhecido
Por um pregão do ninho meu paterno.
Ouvi: vereis o nome engrandecido
Daqueles de quem sois senhor superno,
E julgareis qual é mais excelente,
Se ser do mundo Rei, se de til gente.

11
Ouvi, que não vereis com vãs façanhas,
Fantásticas, fingidas, mentirosas,
Louvar os vossos, como nas estranhas
Musas, de engrandecer-se desejosas:
As verdadeiras vossas são tamanhas,
Que excedem as sonhadas, fabulosas;
Que excedem Rodamonte, e o vão Rugeiro,
E Orlando, inda que fora verdadeiro,

12
Por estes vos darei um Nuno fero,
Que fez ao Rei o ao Reino tal serviço,
Um Egas, e um D. Fuas, que de Homero
A cítara para eles só cobiço.
Pois pelos doze Pares dar-vos quero
Os doze de Inglaterra, e o seu Magriço;
Dou-vos também aquele ilustre Gama,
Que para si de Eneias toma a fama.
|!PAGE!|
13
Pois se a troco de Carlos, Rei de França,
Ou de César, quereis igual memória,
Vede o primeiro Afonso, cuja lança
Escura faz qualquer estranha glória;
E aquele que a seu Reino a segurança
Deixou com a grande e próspera vitória;
Outro Joane, invicto cavaleiro,
O quarto e quinto Afonsos, e o terceiro.

14
Nem deixarão meus versos esquecidos
Aqueles que nos Reinos lá da Aurora
Fizeram, só por armas tão subidos,
Vossa bandeira sempre vencedora:
Um Pacheco fortíssimo, e os temidos
Almeidas, por quem sempre o Tejo chora;
Albuquerque terríbil, Castro forte,
E outros em quem poder não teve a morte.

15
E enquanto eu estes canto, e a vós não posso,
Sublime Rei, que não me atrevo a tanto,
Tomai as rédeas vós do Reino vosso:
Dareis matéria a nunca ouvido canto.
Comecem a sentir o peso grosso
(Que pelo mundo todo faça espanto)
De exércitos e feitos singulares,
De África as terras, e do Oriente os marços,
|!PAGE!|
        Chapter 3

16
Em vós os olhos tem o Mouro frio,
Em quem vê seu exício afigurado;
Só com vos ver o bárbaro Gentio
Mostra o pescoço ao jugo já inclinado;
Tethys todo o cerúleo senhorio
Tem para vós por dote aparelhado;
Que afeiçoada ao gesto belo e tenro,
Deseja de comprar-vos para genro.

17
Em vós se vêm da olímpica morada
Dos dois avós as almas cá famosas,
Uma na paz angélica dourada,
Outra pelas batalhas sanguinosas;
Em vós esperam ver-se renovada
Sua memória e obras valerosas;
E lá vos tem lugar, no fim da idade,
No templo da suprema Eternidade.

18
Mas enquanto este tempo passa lento
De regerdes os povos, que o desejam,
Dai vós favor ao novo atrevimento,
Para que estes meus versos vossos sejam;
E vereis ir cortando o salso argento
Os vossos Argonautas, por que vejam
Que são vistos de vós no mar irado,
E costumai-vos já a ser invocado.
|!PAGE!|
19
Já no largo Oceano navegavam,
As inquietas ondas apartando;
Os ventos brandamente respiravam,
Das naus as velas côncavas inchando;
Da branca escuma os mares se mostravam
Cobertos, onde as proas vão cortando
As marítimas águas consagradas,
Que do gado de Próteo são cortadas

20
Quando os Deuses no Olimpo luminoso,
Onde o governo está da humana gente,
Se ajuntam em concílio glorioso
Sobre as cousas futuras do Oriente.
Pisando o cristalino Céu formoso,
Vêm pela Via-Láctea juntamente,
Convocados da parte do Tonante,
Pelo neto gentil do velho Atlante.

21
Deixam dos sete Céus o regimento,
Que do poder mais alto lhe foi dado,
Alto poder, que só co\'o pensamento
Governa o Céu, a Terra, e o Mar irado.
Ali se acharam juntos num momento
Os que habitam o Arcturo congelado,
E os que o Austro tem, e as partes onde
A Aurora nasce, e o claro Sol se esconde.
    </string>
    <string name="search_content_description">Search</string>
    <string name="note_hint">Insert a note here…</string>
    <string name="results_search">Results:</string>
    <string name="lusiadas_res">Lusiadas</string>
    <string name="lus_res_tit">Os Lusiadas</string>
    <string name="note_edit_confirm">Confirm</string>
    <string name="note_edit_remove">Remove all</string>
    <string name="import_book_mybooks">Import a Book</string>
    <string name="book_import_content_description">Book import</string>
    <string name="filter_content_description">Filter</string>
    <string name="my_books_top_label">My Books</string>
</resources>