<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/results_search"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/results_search" />

                <ImageButton
                    android:id="@+id/filter_menu"
                    android:layout_width="48dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="280dp"
                    android:layout_marginLeft="280dp"
                    android:layout_marginTop="0dp"
                    android:adjustViewBounds="true"

                    android:contentDescription="@string/menu_content_description"
                    android:scaleType="fitXY"

                    app:srcCompat="@drawable/ic_baseline_settings_backup_restore_24"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="211dp"
                android:layout_height="206dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/lusiadas_res"
                    android:layout_width="158dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.10"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/lusiadas_res"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/continueReading"
                    app:srcCompat="@drawable/lusiadas"
                    tools:ignore="VectorDrawableCompat" />


                <TextView
                    android:id="@+id/lus_res_tit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/lus_res_tit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memorial" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>